# Q4-Hackathon-Todo-App

phase1/: pyproject.toml
phase1/.claude/agents/: Spec-Driven Todo Architect.md  Todo Architecture Planner.md  Todo Implementation Guide.md  Todo Spec Writer.md  Todo Task Manager.md
phase1/.claude/skills/: spec-driven-todo-architect.yml  todo-architecture-planner.yml  todo-implementation-guide.yml  todo-spec-writer.yml  todo-task-manager.yml
phase1/.specify/memory/: constitution.md
phase1/history/prompts/001-todo-crud/: 001-phase1-spec-creation.spec.prompt.md  002-phase1-plan-creation.plan.prompt.md  003-phase1-tasks-generation.tasks.prompt.md  004-phase1-implementation.green.prompt.md
phase1/history/prompts/constitution/: 001-phase1-constitution-creation.constitution.prompt.md
phase1/specs/001-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1/specs/001-todo-crud/checklists/: requirements.md
phase1/specs/001-todo-crud/contracts/: cli-interface.md  service-interface.md
phase1/src/: __init__.py  main.py
phase1/src/cli/: __init__.py  display.py  handlers.py  menu.py
phase1/src/models/: __init__.py  todo.py
phase1/src/services/: __init__.py  todo_service.py
phase1/src/storage/: __init__.py  memory_store.py
phase1/tests/unit/: test_memory_store.py  test_todo.py  test_todo_service.py
phase4/backend/: Dockerfile  pyproject.toml  requirements.txt
phase4/backend/app/agents/: todo_agent.py
phase4/backend/app/api/v1/: chat.py  (+1 more)
phase4/backend/app/core/: mui.py
phase4/backend/app/models/: task.py  user.py
(+247 files in other folders)
